--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
       - .env
     restart: on-failure
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health || exit 1"]
+      test: ["CMD", "curl", "-f", "api.seoeunjin.com/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
